prepoznaje gde ima dobitne kombinacije i animira ih sve odjednom i crta linije

--- a/main.html
+++ b/main.html
@@ -12,7 +12,8 @@
         <div class="gamble-container">
           <canvas id="canvas1"></canvas>
         </div>
-        <button id="button">Klikni</button>    
+        <button id="button">Klikni</button>
+        <button id="button2">Drugi</button>    
     </div>
   <script src="skripta.js"></script>  
 </body>
