animacija svih dobitnih kombinacija i animicaija pojedinacno

--- a/main.html
+++ b/main.html
@@ -13,7 +13,8 @@
           <canvas id="canvas1"></canvas>
         </div>
         <button id="button">Klikni</button>
-        <button id="button2">Drugi</button>    
+        <button id="button2">Drugi</button>
+        <button id="button3">Test</button>    
     </div>
   <script src="skripta.js"></script>  
 </body>
