pozicionirani reelovi kao i auto dugme

--- a/main.html
+++ b/main.html
@@ -14,8 +14,8 @@
           <canvas id="canvas1"></canvas>
        
         <div class="info">
-          <button id="button">Start</button>
-          <button id="button2">Auto</button>
+          <button id="button" class="flex-center">Start</button>
+          <button id="button2" class="flex-center">Auto</button>
         </div>
       </div>
         
