implementirani canvasi za linije

--- a/main.html
+++ b/main.html
@@ -13,6 +13,8 @@
         <img src="images/main-background.png" alt="Pozadina" class="fullscreen-bg">
         <div class="gamble-container">
           <canvas id="canvas1"></canvas>
+          <canvas id="canvas2"></canvas>
+          <canvas id="canvas3"></canvas>
        
         <div class="info">
           <div class="info-wrapper flex-center">
