--- a/main.html
+++ b/main.html
@@ -18,7 +18,6 @@
        
         <div class="info">
           <div class="info-wrapper flex-center">
-            <div class="credit">Credit</div>
             <div class="muteBtn flex-center">
               <i id="volume" class="fa fa-volume-off fa-2x"></i>
             </div>
@@ -37,7 +36,7 @@
                 <span id="creditSpan">Credit</span>
               </li>
               <li>
-                <span id="credit">5000.00</span>
+                <span id="credit"></span>
               </li>
             </ul>
             <ul>
@@ -53,7 +52,7 @@
                 <span id="betSpan">Total bet</span>
               </li>
               <li>
-                <span id="Totalbet">1.00</span>
+                <span id="Totalbet"></span>
               </li>
             </ul>
           </div>
