odradjeno auto sa granicama da ne dozvoli ako se ima manje para

--- a/main.html
+++ b/main.html
@@ -27,6 +27,9 @@
             <div class="infoButton">
               <i id="infoBtn" class="fa fa-info-circle fa-2x cursor" aria-hidden="true"></i>
             </div>
+            <div>
+                <i id="cashAdd"class="fa fa-money fa-2x cursor" aria-hidden="true"></i>
+            </div>
           </div>
           <div class="info-labels flex-center">
             <ul>
