dodat gamble deo kao nova stranica

--- a/main.html
+++ b/main.html
@@ -86,6 +86,7 @@
             
             <button id="button" class="flex-center buttonGamble">Start</button>
             <button id="button2" class="flex-center buttonGamble">Auto</button>
+            <button id="gambleBtn" class="flex-center buttonGamble disabled">Gamble</button>
           </div>
           
         </div>
