zavrsen auto deo sa limitMoney, broj rundi i kao stopOnWin

--- a/main.html
+++ b/main.html
@@ -272,17 +272,17 @@
                         <label>Rounds</label>
                          <div class="infoForRounds flex-center ">
                                 <div class="bet-button-wrapper forRound ">
-                                    <div style="color: green; font-weight: bold;" onclick="incrementAuto()" class="cursor">+</div>
+                                    <div style="color: green; font-weight: bold;" onclick="incrementAuto()" class="cursor1">+</div>
                                     <div id="rounds" style="color: white;"></div>
-                                    <div style="color: red; font-weight: bold; "onclick="decrementAuto()" class="cursor">-</div>
+                                    <div style="color: red; font-weight: bold; "onclick="decrementAuto()" class="cursor1">-</div>
                                 </div>
                             </div>
                     </div>
                     <div id="autoLimit" class="autoDiv">
                         <label>Limit Money</label>
-                        <input id="" type="number">
+                        <input id="moneyLimit" type="number" placeholder="Unesite Limit Novca">
                     </div>
-                    <div id="autoStop"class="autoDiv">
+                    <div id="autoStop"class="autoDivBox">
                         <label>Stop on win</label>
                         <input type="checkbox" id="checkbox" value="1">
                     </div>
