napravljen dokument za projekat

--- a/main.html
+++ b/main.html
@@ -280,7 +280,7 @@
                     </div>
                     <div id="autoLimit" class="autoDiv">
                         <label>Limit Money</label>
-                        <input id="moneyLimit" type="number" placeholder="Unesite Limit Novca">
+                        <input id="moneyLimit" type="number" placeholder="Insert Money Limit">
                     </div>
                     <div id="autoStop"class="autoDivBox">
                         <label>Stop on win</label>
@@ -296,7 +296,11 @@
             
         </div>
     </div>
-    
-    <script src="skripta2.js"></script>  
+<script src="game.js"></script>          
+<script src="animations.js"></script>     
+<script src="resize.js"></script>         
+<script src="lines.js"></script>          
+<script src="events.js"></script>          
+<script src="automode.js"></script>       
 </body>
 </html>
